--- a/UtmBuilder.Core/.gitignore
+++ b/UtmBuilder.Core/.gitignore
@@ -291,7 +291,7 @@ node_modules/
 # Visual Studio 6 build log
 *.plg
 
-# Visual Studio 6 workspace options file
+# Visual Studio 6 workspace options filee
 *.opt
 
 # Visual Studio 6 auto-generated workspace file (contains which files were open etc.)
